feat: implement employer service
